welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:3: error: '<-' expected but ')' found.
for(nbp <1 to 8) {
               ^Runner:12: error: illegal start of simple expression
	}
        ^