welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var nbp=0
for(nbp <1 to 8) {
while(!estFaceMur){
	avance();
} 
{
	gauche();avance();droite();avance();
}
}